--- a/Project.ipynb
+++ b/Project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,8 @@
     "\n",
     "print(\"Loading word vectors\")\n",
     "embeddings_index = {}\n",
-    "#dct = {}\n",
+    "dct = {}\n",
+    "vectors = []\n",
     "\n",
     "with open(\"glove300.txt\", 'r') as fh:\n",
     "    for line in fh:\n",
@@ -30,7 +31,8 @@
     "        word = values[0]\n",
     "        coefs = np.asarray(values[1:], dtype='float32')\n",
     "        embeddings_index[word] = coefs\n",
-    "        #dct[word] = values[1:]\n",
+    "        dct[word] = values[1:]\n",
+    "        vectors.append(coefs)\n",
     "        \n",
     "\n",
     "print('Found %s word vectors.' % len(embeddings_index))\n"
@@ -38,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -206,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -301,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -347,75 +349,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "input:  [  0   0   0 ...,   2  29 150]\n",
-      "prediction:  [ 0.04572431  0.01570713  0.05382569 -0.11145879  0.1462418   0.04722214\n",
-      " -0.04859181 -0.10704654 -0.09107925 -0.01094797 -0.10073339 -0.04246584\n",
-      "  0.13497752 -0.10365248 -0.23515652 -0.13684878 -0.20667528  0.00721037\n",
-      "  0.17974156 -0.15897979  0.14913592  0.14937566  0.01850339  0.11201054\n",
-      "  0.2268997  -0.14638424 -0.20244944  0.24165636  0.36174268  0.04289497\n",
-      " -0.00321247 -0.09621538 -0.01938743 -0.03167554 -0.17574283  0.14660315\n",
-      " -0.05914986 -0.06970091 -0.10216457  0.0587291   0.0356455  -0.008211\n",
-      " -0.22130033 -0.04675016 -0.11456672 -0.10555627 -0.09474204 -0.04943121\n",
-      "  0.14787239 -0.11926004  0.06533959  0.27145827 -0.21120021 -0.07077575\n",
-      "  0.00621931 -0.071443    0.09603091  0.1817199   0.17582867 -0.00249821\n",
-      " -0.05660181  0.27953646 -0.05721919  0.2707743   0.06069357 -0.16527149\n",
-      " -0.16364256  0.0371842  -0.26538384 -0.04680658 -0.03583626 -0.04456161\n",
-      "  0.14272247  0.05205672 -0.20102808  0.02758783 -0.06952568  0.17310834\n",
-      "  0.128957    0.22907948  0.12762934  0.16587779  0.09894659  0.27822176\n",
-      " -0.05862916  0.08336861  0.02883911  0.06394457  0.22497085 -0.10092807\n",
-      "  0.18964681 -0.12086632 -0.07793348 -0.07368658 -0.11572463  0.06163947\n",
-      " -0.13763407  0.05439957 -0.00257985  0.01644555  0.12344936  0.09290269\n",
-      " -0.05649763 -0.07749885 -0.03798461 -0.12273023  0.02894497 -0.02702772\n",
-      "  0.06382199 -0.05981364 -0.1299084   0.00362715 -0.05591824 -0.11891319\n",
-      "  0.11413597  0.04188897 -0.01016873 -0.00384288  0.03481609 -0.25461724\n",
-      "  0.1066803  -0.09378323 -0.00711472 -0.06986503 -0.08852756  0.04128344\n",
-      " -0.01722727  0.08720706 -0.06215423 -0.05398004 -0.03876815 -0.17082426\n",
-      " -0.05908665 -0.08169021 -0.0863748   0.02849126 -0.02997102 -0.25289303\n",
-      "  0.01639672  0.05430655  0.01283736 -0.089827   -0.05394506  0.02123901\n",
-      " -0.0815226   0.05946349  0.00070652  0.20086846  0.10941684 -0.17455083\n",
-      " -0.09817962 -0.04951236  0.06481856  0.03692434  0.03405733 -0.01363943\n",
-      " -0.10456346  0.00343941  0.20266762  0.06309525 -0.05179825  0.06666106\n",
-      "  0.0098431   0.12450676 -0.30792814 -0.26879027  0.0208529   0.03986145\n",
-      " -0.23663327 -0.07276427  0.05747048  0.02093035  0.05913327 -0.12839624\n",
-      "  0.08835046  0.17050532  0.11943638 -0.12075428 -0.43983847  0.10977934\n",
-      " -0.20992379 -0.16244416 -0.02887086  0.05603391 -0.00174179 -0.17729595\n",
-      "  0.07562609  0.12581679 -0.1663762   0.25329852 -0.06729602 -0.02973879\n",
-      " -0.02137953  0.13790545 -0.0189357  -0.00916217  0.19860417 -0.0426424\n",
-      "  0.13844988 -0.19014046  0.01100269 -0.06133977  0.06146131  0.25675946\n",
-      " -0.05337143  0.13091192  0.04462605 -0.11742167 -0.07575701  0.04135511\n",
-      " -0.06779113 -0.1720435  -0.03206792 -0.18093458 -0.20149747 -0.06646974\n",
-      " -0.34563684 -0.16379514  0.03535838 -0.07223048 -0.04909878  0.0395952\n",
-      "  0.11088604  0.00073295  0.07671575  0.17489369 -0.01131769  0.11366959\n",
-      " -0.01906598 -0.24778405  0.09214786  0.05384031  0.07672949 -0.04449886\n",
-      "  0.0414627   0.21402359  0.09249873  0.03907951 -0.04640493  0.11970417\n",
-      " -0.16945423 -0.16211611 -0.07202426 -0.06563301  0.08995283 -0.24161002\n",
-      " -0.05063313  0.0332876   0.14327455 -0.07097208  0.09577765  0.25941321\n",
-      " -0.34656397 -0.04084239  0.00453077  0.07451372  0.01749424  0.18562397\n",
-      "  0.08946995 -0.11894825  0.07221947 -0.05603735 -0.04290498 -0.17474893\n",
-      " -0.04554316  0.10468653 -0.02009897  0.2209042   0.16392319  0.02447106\n",
-      " -0.18020083 -0.09987836 -0.02462383 -0.06188898 -0.00785645 -0.06677273\n",
-      "  0.1347044  -0.23788556  0.0608625   0.09636193  0.17552909  0.05014561\n",
-      "  0.08043443  0.0302769   0.15190613 -0.23998088 -0.19424212 -0.05346512\n",
-      "  0.16896388  0.03416946 -0.17401257  0.11276577 -0.00741473  0.04871307\n",
-      "  0.02209225  0.00461047 -0.11623894 -0.04167836 -0.12922482  0.05272946]\n"
+      "{'dtype': 'float32', 'return_sequences': True, 'recurrent_dropout': 0.0, 'unroll': False, 'dropout': 0.0, 'kernel_regularizer': None, 'bias_initializer': {'class_name': 'Zeros', 'config': {}}, 'go_backwards': False, 'bias_regularizer': None, 'trainable': True, 'implementation': 1, 'recurrent_constraint': None, 'recurrent_activation': 'hard_sigmoid', 'bias_constraint': None, 'kernel_constraint': None, 'activity_regularizer': None, 'batch_input_shape': (None, 1024, 300), 'use_bias': True, 'activation': 'tanh', 'recurrent_initializer': {'class_name': 'Orthogonal', 'config': {'seed': None, 'gain': 1.0}}, 'units': 300, 'kernel_initializer': {'class_name': 'VarianceScaling', 'config': {'seed': None, 'distribution': 'uniform', 'mode': 'fan_avg', 'scale': 1.0}}, 'return_state': False, 'stateful': True, 'name': 'Layer_1_new', 'recurrent_regularizer': None}\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "#print(model.get_weights()[0])\n",
+    "print(new_L1.get_config())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for *: 'dict_values' and 'float'",
+     "ename": "NameError",
+     "evalue": "name 'dct' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-13-e979749629f9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     15\u001b[0m dst = (np.dot(word_vectors, prediction)\n\u001b[1;32m     16\u001b[0m                \u001b[0;34m/\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlinalg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnorm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mword_vectors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m                / np.linalg.norm(prediction))\n\u001b[0m\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0mword_ids\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0margsort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mdst\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for *: 'dict_values' and 'float'"
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-43-edc84d557da5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mitems_iterator\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0membeddings_index\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0minverse_dictionary\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdct\u001b[0m \u001b[0;31m#{v: k for k, v in items_iterator}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0mword_vectors\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0membeddings_index\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'dct' is not defined"
      ]
     }
    ],
@@ -425,9 +388,9 @@
     "\n",
     "import keras.preprocessing.text\n",
     "\n",
-    "print(\"input: \", data[0])\n",
-    "prediction = new_model.predict(np.array(data[0])[np.newaxis])[0]\n",
-    "print(\"prediction: \", prediction)\n",
+    "#print(\"input: \", data[0])\n",
+    "prediction = new_model.predict(np.array(data[0])[np.newaxis])\n",
+    "#print(\"prediction: \", prediction[0])\n",
     "\n",
     "items_iterator = embeddings_index.items()\n",
     "inverse_dictionary = dct #{v: k for k, v in items_iterator}\n",
